# Molecular-Formula-Calculator

backend/: CMakeLists.txt
backend/src/: Element.cpp  Element.h  GlobalDefs.h  Molecule.cpp  Molecule.h  PTable.cpp  PTable.h  chemistry.h  server.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  setupProxy.js
frontend/src/components/: FileUploader.js  InputBox.js  OutputBox.css  OutputBox.js
frontend/src/net/: web.js
